trait comments for associated unit

--- a/Terrax Guard/Data/Core/Languages/English/Traits.xml
+++ b/Terrax Guard/Data/Core/Languages/English/Traits.xml
@@ -6,13 +6,14 @@
 	<entry name="AstraMilitarum/TerraxDiscipline" value="Terrax Discipline"/>
 	<!-- <entry name="AstraMilitarum/TerraxDisciplineDescription" value="Adjacent allies gain increased accuracy and lose less morale."/> -->
 	<entry name="AstraMilitarum/TerraxDisciplineFlavor" value="Being assigned to operate with what is effectively a regiment of commissars is simultaneous inspiring and (much more so) terrifying. Guardsmen find themselves standing straighter and training more often, lest they risk being made an example of. It was bad enough with one pair of eyes, and now there's an entire platoon watching your every move."/>
+	<!-- Terrax Storm Trooper -->
 	<entry name="AstraMilitarum/TerraxOvercharged" value="Overcharged Weapon"/>
 	<!-- <entry name="AstraMilitarum/TerraxOverchargedDescription" value=""/> -->
 	<entry name="AstraMilitarum/TerraxOverchargedFlavor" value="<string name='Actions/AstraMilitarum/TerraxOverchargePlasmaFlavor'/>"/>
 	<entry name="AstraMilitarum/TerraxThrownPistol" value="Pistol Thrown"/>
 	<entry name="AstraMilitarum/TerraxThrownPistolDescription" value="Ranged weapon is unavailable."/>
 	<entry name="AstraMilitarum/TerraxThrownPistolFlavor" value="An overloaded plasma pistol's explosion will turn its wielder into a bubbling puddle of flesh. Throwing the weapon away can save the user's life, and it can even take the enemy's. However, guardsmen will have trouble explaining to the commissar why they decided that their life was worth more than a rare, meticulously crafted weapon. Many troopers find themselves handed over to the Adeptus Mechanicus for sentencing, and of those who can still feel, few remain satisfied with the decision they made on the battlefield."/>
-	<!-- Colonel -->
+	<!-- Terrax Colonel -->
 	<entry name="AstraMilitarum/TerraxColonelDiscipline" value="Colonel's Gaze"/>
 	<entry name="AstraMilitarum/TerraxColonelDisciplineDescription" value="Infantry gain increased accuracy and lose less morale. Members of the Terrax Guard gain increased ranged attacks and further increased melee attacks."/>
 	<entry name="AstraMilitarum/TerraxColonelDisciplineFlavor" value="Terrax Colonels lead the best of the best, necessitating the most effective methods. Common soldiers feel fear when seeing the Terrax Guard, but are somewhat inspired. Terrax Colonels know how to mitigate that fear without removing it completely. Balance is maintained between fear and a desire to act with initiative in order to impress their leader."/>
