--- a/Sabre Gun Platform/Data/Core/Languages/English/Units.xml
+++ b/Sabre Gun Platform/Data/Core/Languages/English/Units.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
 	<entry name="AstraMilitarum/SabreGunPlatform" value="Sabre Gun Platform"/>
-	<entry name="AstraMilitarum/SabreGunPlatformDescription" value="."/>
-	<entry name="AstraMilitarum/SabreGunPlatformFlavor" value=""/>
+	<entry name="AstraMilitarum/SabreGunPlatformDescription" value="Immobile, manned anti-air weapons emplacement. Performance improves as more crew operates it."/>
+	<entry name="AstraMilitarum/SabreGunPlatformFlavor" value="Guardsmen fear the skies. Enemies on the ground, horrifying as they are, can be shot and stabbed. Enemies in the air are much more difficult to fight back against, and without support from the Navis Imperialis, airborne foes have near-free reign to bombard helpless Guardsmen. When defending strategic points, the Astra Militarum has been known to construct Sabre Gun Platforms for added firepower. They can be equipped with a variety of typical Imperial armaments, but most-beloved are the quad-mounted Heavy Stubbers. Sheer volume of fire creates a wall of bullets for enemy aircraft to crash into. Its heavy armour plates provide ample cover, while its gyroscopic platform allows for rapid target acquistion when assaulted on multiple fronts. However, the platform cannot be moved without being completely disassambled. When preparing for the enemy, this is inconvenient but managable. When a retreat is called during battle, however, the crew knows they'll either have to scuttle the weapons or fight to the bitter end. Dying with honour requires no explanation; cowardly allowing Imperial equipment to be captured leaves room for none."/>
 </language>
