--- a/Sabre Gun Platform/Data/Core/Languages/English/Actions.xml
+++ b/Sabre Gun Platform/Data/Core/Languages/English/Actions.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
-	<entry name="AstraMilitarum/ConstructSabreGunPlatform" value="Construct Sabre Gun Platform"/>
+	<entry name="AstraMilitarum/ConstructSabreGunPlatform" value="Construct <string name='Units/AstraMilitarum/SabreGunPlatform'/>"/>
 	<entry name="AstraMilitarum/ConstructSabreGunPlatformDescription" value="Constructs an immobile, manned anti-air emplacement."/>
 	<entry name="AstraMilitarum/ConstructSabreGunPlatformFlavor" value="Servitors lug crates of material to the construction site, where tech-priests burn incense and perform rituals blessing the components. When the emplacement is fully built, the crew gathers to recite the Canticle of Ack-Ack, completing its construction."/>
+	<entry name="AstraMilitarum/ConstructSabreGunPlatformLascannon" value="Construct <string name='Units/AstraMilitarum/SabreGunPlatformLascannon'/>"/>
+	<entry name="AstraMilitarum/ConstructSabreGunPlatformLascannonDescription" value="Constructs an immobile, manned anti-armour emplacement."/>
+	<entry name="AstraMilitarum/ConstructSabreGunPlatformLascannonFlavor" value="<string name='AstraMilitarum/ConstructSabreGunPlatformLascannonFlavor'/>"/>
 </language>
