--- a/Sabre Gun Platform/Data/Core/Languages/English/Traits.xml
+++ b/Sabre Gun Platform/Data/Core/Languages/English/Traits.xml
@@ -9,4 +9,7 @@
 	<entry name="SabreFullyManned2" value="Fully Manned 2"/>
 	<entry name="SabreFullyManned2Description" value="Hidden helper to kill cargo == 2"/>
 	<entry name="SabreFullyManned2Flavor" value="nyaaaa :3"/>
+	<entry name="SabreGroundAim" value="Sabre Heavy Barrels"/>
+	<entry name="SabreGroundAimDescription" value="When attacking vehicles, gain armour penetration and damage. Reduced accuracy against Flyers, Jetpacks, Jetbikes, and Skimmers."/>
+	<entry name="SabreGroundAimFlavor" value="To be mounted on a swivelable platform, twin-linked lascannons have a reduced core charge to prevent excessive overheating. However, specialised heavy barrels can be installed to improve effectiveness against armour. Much to the chagrin of the Adeptus Mechanicus, it is unknown why these barrels have no change in effect against flesh. In addition, the weight of these barrels makes it more difficult to swing the weapon around, making it harder to aim against agile foes."/>
 </language>
