--- a/Sabre Gun Platform/Data/Core/Languages/English/Traits.xml
+++ b/Sabre Gun Platform/Data/Core/Languages/English/Traits.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
+	<entry name="SabreGroundAim" value="Sabre Heavy Barrels"/>
+	<entry name="SabreGroundAimDescription" value="When attacking vehicles, gain armour penetration and damage. Reduced accuracy against Flyers, Jetpacks, Jetbikes, and Skimmers."/>
+	<entry name="SabreGroundAimFlavor" value="To be mounted on a swivelable platform, twin-linked lascannons have a reduced core charge to prevent excessive overheating. However, specialised heavy barrels can be installed to improve effectiveness against armour. Much to the chagrin of the Adeptus Mechanicus, it is unknown why these barrels have no change in effect against flesh. In addition, the weight of these barrels makes it more difficult to swing the weapon around, making it harder to aim against agile foes."/>
+	<entry name="SabreSkyfire" value="<string name='Traits/Skyfire'/>"/>
+	<entry name="SabreSkyfireDescription" value="<string name='Traits/SkyfireDescription'/>"/>
+	<entry name="SabreSkyfireFlavor" value="<string name='Traits/SkyfireFlavor'/>"/>
 	<entry name="SabreMannedLoader" value="Loading Crew Present"/>
 	<entry name="SabreMannedLoaderDescription" value="When more than one cargo slot is filled, increase attacks and melee damage reduction. When more than two cargo slots are filled, increase accuracy and melee damage reduction."/>
 	<entry name="SabreMannedLoaderFlavor" value="While gunners can load weapons on their own, having a loading crew to handle ammo and barrel maintenance allows them to focus on continuing to lay down fire. Loaders also double as security, as they can deliver suppressing fire upon any approaching enemies from the ground."/>
@@ -9,7 +15,4 @@
 	<entry name="SabreFullyManned2" value="Fully Manned 2"/>
 	<entry name="SabreFullyManned2Description" value="Hidden helper to kill cargo == 2"/>
 	<entry name="SabreFullyManned2Flavor" value="nyaaaa :3"/>
-	<entry name="SabreGroundAim" value="Sabre Heavy Barrels"/>
-	<entry name="SabreGroundAimDescription" value="When attacking vehicles, gain armour penetration and damage. Reduced accuracy against Flyers, Jetpacks, Jetbikes, and Skimmers."/>
-	<entry name="SabreGroundAimFlavor" value="To be mounted on a swivelable platform, twin-linked lascannons have a reduced core charge to prevent excessive overheating. However, specialised heavy barrels can be installed to improve effectiveness against armour. Much to the chagrin of the Adeptus Mechanicus, it is unknown why these barrels have no change in effect against flesh. In addition, the weight of these barrels makes it more difficult to swing the weapon around, making it harder to aim against agile foes."/>
 </language>
