--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Actions.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Actions.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
-    <entry name="AstraMilitarum/" value=""/>
-    <entry name="AstraMilitarum/Description" value=""/>
-    <entry name="AstraMilitarum/Flavor" value=""/>
+    <entry name="AstraMilitarum/Ura" value="Ura!"/>
+    <entry name="AstraMilitarum/UraDescription" value="Inspires Valhallans within 3 tiles to advance with decreased morale loss, increased damage, and damage resistance. Requires 4 allied Valhallans within 3 tiles to activate."/>
+    <entry name="AstraMilitarum/UraFlavor" value=""/>
 </language>
