anti tank rifles and dshk team

--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Units.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Units.xml
@@ -10,7 +10,7 @@
     <entry name="AstraMilitarum/ValhallanSharpshootersDescription" value=""/>
     <entry name="AstraMilitarum/ValhallanSharpshootersFlavor" value=""/>
     <entry name="AstraMilitarum/ValhallanAntiTankRiflemen" value="Valhallan Anti-Tank Rifle Squad"/>
-    <entry name="AstraMilitarum/ValhallanAntiTankRiflemenDescription" value=""/>
+    <entry name="AstraMilitarum/ValhallanAntiTankRiflemenDescription" value="Infantry armed with semi-automatic anti-tank rifles."/>
     <entry name="AstraMilitarum/ValhallanAntiTankRiflemenFlavor" value=""/>
     <entry name="AstraMilitarum/ValhallanHeavyGunnerSquad" value="Valhallan Heavy Stubber Squad"/>
     <entry name="AstraMilitarum/ValhallanHeavyGunnerSquadDescription" value=""/>
