--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Traits.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Traits.xml
@@ -28,4 +28,7 @@
     <entry name="ValhallanHotWeapon" value="Hot Weapon"/>
     <entry name="ValhallanHotWeaponDescription" value="Wielder takes damage when firing while on Arctic or Tundra tiles. When on Desert, Savannah, or Volcanic tiles, take even more damage."/>
     <entry name="ValhallanHotWeaponFlavor" value=""/>
+    <entry name="ValhallanUnwieldy" value="Indirect Fire Inaccuracy"/>
+    <entry name="ValhallanUnwieldyDescription" value="Decreased accuracy against units that are not Fortifications."/>
+    <entry name="ValhallanUnwieldyFlavor" value=""/>
 </language>
